gcs-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcs-service
spec:
  selector:
    app: gcs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
