gcs-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcs-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gcs
    networking.gke.io/managed-certificates: gcs-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: gcs.nino.run
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gcs-service
            port:
              number: 80
